--- a/src/JFrames/SubmarineWindow.form
+++ b/src/JFrames/SubmarineWindow.form
@@ -213,6 +213,7 @@
       <SubComponents>
         <Component class="javax.swing.JTextArea" name="txtaMessagesDisplay">
           <Properties>
+            <Property name="editable" type="boolean" value="false"/>
             <Property name="columns" type="int" value="20"/>
             <Property name="rows" type="int" value="5"/>
           </Properties>
@@ -275,6 +276,9 @@
         <Property name="paintTicks" type="boolean" value="true"/>
         <Property name="value" type="int" value="100"/>
       </Properties>
+      <Events>
+        <EventHandler event="stateChanged" listener="javax.swing.event.ChangeListener" parameters="javax.swing.event.ChangeEvent" handler="sliderO2StateChanged"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JSpinner" name="spinnerSoldierCount">
       <Properties>
